# focus_app

./: APP_SUMMARY.md  AppMonitor.cpp  AppMonitor.h  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Config.cpp  Config.h  FocusApp.manifest  FocusApp.sln  FocusApp.vcxproj  Makefile  README.md  SettingsDialog.cpp  SettingsDialog.h  TimerWidget.cpp  TimerWidget.h  build.bat  compile.bat  create_icon.py  focus_app.cpp  focus_app_full.cpp  focus_app_simple.cpp  focus_clock_app.html  main.cpp  resource.h  resource.rc
.github/workflows/: build.yml
tests/: test_basic.cpp
